--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -2,3 +2,44 @@
 title: ""
 output: github_document
 ---
+
+```{r}
+library(tidyverse)
+
+```
+
+Read in wine data.
+```{r}
+wine_df = 
+  read_csv(
+  "./wine_data/winemag-data-130k-v2.csv") %>% 
+  select(-region_2, -taster_twitter_handle) %>% 
+  filter(variety == "Pinot Noir",
+         !is.na(region_1))
+
+### remove region 2, taster twitter and missing values in region 1.
+
+
+
+```
+
+Explore the data
+```{r}
+
+
+#wine_df %>% 
+#  count(taster_name) 
+
+# 17 tasters, could be one of the x variables
+
+#wine_df %>% 
+#  count(region_1) %>% 
+#  summarise(mean = mean(n))
+### more than 200 distinct regions
+
+#wine_df %>% 
+#  count(is.na(region_1))
+
+### 1154 NA regions
+```
+
