--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -36,7 +36,11 @@ wine_df =
 
 ### remove region 2, taster twitter and missing values in region 1.
 
-wine_type <- wine_df %>% group_by(variety) %>% count() %>% arrange(desc(n)) %>% as.tibble()
+wine_type <- read_csv("./wine_data/winemag-data-130k-v2.csv") %>% 
+            group_by(variety) %>% 
+            count() %>% 
+            arrange(desc(n)) %>% 
+            as.tibble()
 
 ```
 
