--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -165,7 +165,7 @@ Even though Switzerland has the highest priced wine, the average ratings is only
 
 
 
-Make plots of ratings by year by wine type. 
+Make plots of ratings/price by year by wine type. 
 ```{r}
 
 
@@ -177,8 +177,6 @@ wine_df %>%
   summarise(mean = mean(points)) %>% 
   mutate(mean = round(mean, 2)) %>% 
   ggplot(aes(x = year, y = mean, color = type))+
-  facet_wrap(~type)+
-  geom_point()+
   geom_line() +
   labs(y = "Mean rating",
       x = "Year",
@@ -194,13 +192,92 @@ wine_df %>%
   summarise(mean = mean(price)) %>% 
   mutate(mean = round(mean, 2)) %>% 
   ggplot(aes(x = year, y = mean, color = type))+
-  facet_wrap(~type)+
   geom_point()+
   geom_line() +
   labs(y = "Mean price",
       x = "Year",
-      title = "change in mean price by wine type and year")
+      title = "change in mean price by wine type in 1900-2017")
 
+
+wine_df %>% 
+  filter(!is.na(price),
+         !is.na(type),
+         year > 2000) %>% 
+  group_by(year,type) %>% 
+  summarise(mean = mean(price)) %>% 
+  mutate(mean = round(mean, 2)) %>% 
+  ggplot(aes(x = year, y = mean, color = type))+
+  geom_point()+
+  geom_line() +
+  labs(y = "Mean price",
+      x = "Year",
+      title = "change in mean price by wine type in 21 century")
+```
+
+
+Make plots of ratings by taster.
+```{r}
+
+y <- list(
+  title = "Mean ratings"
+)
+wine_df %>% 
+  filter(!is.na(points)) %>% 
+  group_by(taster_name) %>% 
+  summarise(mean = mean(points)) %>% 
+  mutate(taster_name = fct_reorder(taster_name, mean),
+         mean = round(mean, 2),
+        text_label=str_c("Taster:", taster_name, "\nmean rating:", mean)) %>% 
+  plot_ly(
+  x = ~taster_name, y = ~mean, color = ~taster_name, text = ~text_label, 
+  type = "bar", colors = "viridis") %>% 
+  layout(yaxis = y)
+  
+
+
+
+```
+
+
+who rates the highest price wine? (greater than $800)
+
+```{r}
+
+wine_df %>% 
+  filter(price >= 800,
+         !is.na(taster_name)) %>% 
+  group_by(taster_name) %>% 
+  count()
+
+
+```
+Most of the most expensive wine are rated by Roger Voss.
+
+
+
+```{r}
+wine_df %>% 
+  filter(!is.na(taster_name)) %>% 
+  group_by(taster_name) %>% 
+  count() %>% 
+  arrange(desc(n)) %>% 
+  knitr::kable()
+
+```
+
+Roger Voss rates most number of wine at WineEthusiast Magazine. 
+
+
+Get the winery which has the top average ratings wine. 
+
+```{r}
+
+wine_df %>% 
+  filter(!is.na(winery)) %>% 
+  group_by(winery,country) %>% 
+  summarise(mean = mean(points)) %>% 
+  arrange(desc(mean)) %>% 
+  top_n(10)
 
 
 ```
