--- a/mapping.Rmd
+++ b/mapping.Rmd
@@ -8,6 +8,7 @@ library(tidyverse)
 library(leaflet)
 library(ggplot2)
 library(tigris)
+library(plotly)
 ```
 
 Read in wine data.
@@ -34,9 +35,17 @@ wine_tidy_df =
   mutate(year = year_extract(title)) 
 
 wine_by_country = wine_tidy_df %>% 
+ mutate(
+   country = recode(country, US = "United States")
+ ) %>% 
   group_by(country) %>% 
+  drop_na(country) %>% 
   count() %>% 
-  arrange(desc(n)) %>% view
+  arrange(desc(n)) %>% 
+  rename(
+    total = n) %>% 
+  mutate(total = as.numeric(total)) %>% 
+  view
 
 wine_us = wine_tidy_df %>% 
   filter(country == "US") %>% 
@@ -60,7 +69,7 @@ states %>%
 
 states_merged_wine <- geo_join(states, wine_us, "NAME", "state")
 
-mybins <- c(0,10,50,100,200,1000,5000,8000,10000,Inf)
+mybins <- c(0,100,1000,8000,10000,40000)
 mypal <- colorBin(palette = "Purples", domain = states_merged_wine$total, na.color = "transparent", bins = mybins)
 
 states_merged_wine <- subset(states_merged_wine, !is.na(total))
@@ -82,3 +91,45 @@ states_merged_wine %>%
             position = "bottomright", 
             title = "Wineries")
 ```
+
+```{r world_choropleth}
+wine_by_country
+
+library(rgdal)
+
+world_spdf <- readOGR( 
+  dsn = paste0(getwd(),"/wine_data/world_shape_file/") , 
+  layer = "TM_WORLD_BORDERS_SIMPL-0.3",
+  verbose = FALSE
+)
+
+world_spdf %>% 
+  leaflet() %>% 
+  addTiles() %>% 
+  addPolygons(popup = ~NAME)
+
+countries_merged_wine <- geo_join(world_spdf, wine_by_country, "NAME", "country")
+
+world_bins <- c(0,100,1000,10000,20000,30000,60000)
+world_pal <- colorBin(palette = "Reds", domain = countries_merged_wine$total, na.color = "transparent", bins = world_bins)
+
+countries_merged_wine <- subset(countries_merged_wine, !is.na(total))
+
+world_popup <- paste0("Wineries: ", as.character(countries_merged_wine$total))
+
+countries_merged_wine %>% 
+  leaflet() %>%
+  addProviderTiles("CartoDB.Positron") %>%
+  setView(-98.483330, 38.712046, zoom = 4) %>% 
+  addPolygons(
+    fillColor = ~world_pal(total), 
+    fillOpacity = 1.0, 
+    weight = 0.4, 
+    smoothFactor = 0.2, 
+    popup = ~world_popup) %>% 
+  addLegend(pal = world_pal, 
+            values = countries_merged_wine$total, 
+            position = "bottomright", 
+            title = "Wineries")
+```
+
