--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -30,25 +30,11 @@ scale_fill_discrete = scale_fill_viridis_d
 
 Read in wine data.
 
-```{r extract_year_function}
-year_extract <- function(string) {
-  t <- regmatches(string, regexec("[1-2][9|0][0-9][0-9]", string))
-  sapply(t, function(x) {
-    if (length(x) > 0) {
-      return(as.numeric(x))
-    } else {
-      return(NA)    
-    }
-  })
-}
-```
 
 ```{r}
 wine_df = 
   read_csv(
-  "./wine_data/winemag-data-130k-v2.csv") %>% 
-  select(-region_2, -taster_twitter_handle) %>% 
-  mutate(year = year_extract(title))
+  "./wine_data/tidy/wine_all.csv")
 
 ### remove region 2, taster twitter and missing values in region 1.
 
@@ -58,46 +44,6 @@ wine_df =
 #            arrange(desc(n)) %>% 
 #            as.tibble()
 
-```
-
-Separate wine types by four major types: white, red, sparkling
-
-https://media.winefolly.com/Different-Types-of-Wine-v2.jpg
-
-
-# Subset data to four types of wine: red, white, sparkling, and rose.
-```{r}
-
-wine_type = 
-    read_xlsx(
-  "./wine_data/wine type.xlsx")  
-
-wine_df = 
-  wine_df %>% 
-  mutate(type = ifelse(variety %in% wine_type$red, "red", 
-                       ifelse(variety %in% wine_type$white, "white", 
-                              ifelse(variety %in% wine_type$sparkling, "sparkling", 
-                                     ifelse(variety %in% wine_type$rose, "rose", NA )))))
-
-red_df = 
-  wine_df %>% 
-    filter(!is.na(type),
-           type == "red")
-  
-white_df = 
-  wine_df %>% 
-    filter(!is.na(type),
-           type == "white")
-
-sparkling_df = 
-  wine_df %>% 
-    filter(!is.na(type),
-           type == "sparkling")
-
-rose_df = 
-  wine_df %>% 
-    filter(!is.na(type),
-           type == "rose")
 ```
 
 
